objects/SFDocumentor__Profile_Collection__c.object
<CustomObject>
    <description>An object which stores the details of all the profile present in current Org.</description>
    <fields>
        <fullName>SFDocumentor__Count_of_Users__c</fullName>
        <label>Count of Users</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Id__c</fullName>
        <externalId>true</externalId>
        <label>Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Profile_Type__c</fullName>
        <label>Profile Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__Type__c</fullName>
        <description>This is created by Vishal</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__User_Count__c</fullName>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__User_License__c</fullName>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Profile_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__User_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>